# parms

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: command_helpers.rs  main.rs  param.rs  ssm.rs
src/ssm/: mod.rs
