[package]
name = "parms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
aws-config = "0.57.1"
aws-sdk-ssm = "0.35.0"
clap = { version = "4.4.7", features = ["derive"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
serde_json = "1.0.117"
